--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/recent">Recent Short Links</a></li>
+        <li><a href="/recent">Short Links</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
     </div>
