added sign_in/sign_up forms

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-    <form method="post" action="{{ url_for('new_link') }}">
-        <label>
-            <input type="url" name="long_url" placeholder="Put long URL here" required>
-        </lable>
-        <input type="submit" value="Отправить">
-    </form>
+<form method="post" action="{{ url_for('new_link') }}">
+  <div class="form-group">
+    <!-- <label for="URL">Put a long URL here and we cut it!</label> -->
+    <input class="form-control" name="long_url" placeholder="Put long URL here">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
 {% endblock %}
 
 {% block URL %}
 <div class="col-md-6 col-md-offset-3">
-    <a href="{{ url}}">{{ url}}</a>
+  <a href="{{ url}}">{{ url}}</a>
 </div>
 {% endblock %}
