--- a/templates/base.html
+++ b/templates/base.html
@@ -6,44 +6,39 @@
 </head>
 
 <body>
-<nav class="navbar navbar-default" role="navigation">
-
-<div class="row">
-  <div class="col-md-3 col-md-offset-3">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">LinkCutter</a>
+      <a class="navbar-brand" href={{url_for('home')}}>Link Cutter </a>
     </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/recent">Short Links</a></li>
+        <li><a href={{ url_for('recent')}}>Recent Links<span class="sr-only">(current)</span></a></li>
       </ul>
-    </div>
-    </div>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href={{url_for('sign_in')}}>Sign in</a></li>
+        <li><a href={{url_for('sign_up')}}>Sign up</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
-  <div class="col-md-2 col-md-offset-4">
-        <form method="post" action="{{ url_for('login_page') }}">
-            <button type="submit" class="btn btn-info">Sign in</button>
-        </form>
+
+<div class="container-fluid">
+  <div class="col-md-6 col-md-offset-3">
+    {% block content %}{% endblock %}
   </div>
 </div>
 
-</nav>
-
 <div class="container-fluid">
-<div class="row">
-<div class="col-md-6 col-md-offset-3">
-    {% block content %}{% endblock %}
-</div>
-</div>
-</div>
-
-<div class="container-fluid">
-<div class="row">
+  <div class="row">
     {% block URL %}{% endblock %}
+  </div>
 </div>
-</div>
-
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
