--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,15 @@
       <ul class="nav navbar-nav">
         <li><a href={{ url_for('recent')}}>Recent Links<span class="sr-only">(current)</span></a></li>
       </ul>
-      
+   
       <ul class="nav navbar-nav navbar-right">
-        <li><a href={{url_for('sign_in')}}>Sign in</a></li>
+	{% if login %}
+        <li><a href='#'>Hello, {{login}}</a></li>
+        <li><a href={{url_for('sign_out')}}>Sign out</a></li>
+	{% else %}
+	<li><a href={{url_for('sign_in')}}>Sign in</a></li>
         <li><a href={{url_for('sign_up')}}>Sign up</a></li>
+	{% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
