--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,12 @@
 {% endblock %}
 
 {% block URL %}
+{% if url %}
 <div class="col-md-6 col-md-offset-3">
-  <a href="{{ url}}">{{ url}}</a>
+  <label>Your short URL:</label>
+  <div class="alert alert-success" role="alert">
+    <a href="{{ url}}">{{ url}}</a>
+  </div>
 </div>
+{% endif %}
 {% endblock %}
