--- a/templates/recent_url.html
+++ b/templates/recent_url.html
@@ -5,7 +5,9 @@
 {% block URL %}
 {% for url in dic %}
 <div class="col-md-6 col-md-offset-3">
-    <a href="http://fabula.pythonanywhere.com/{{ url}}">http://fabula.pythonanywhere.com/{{ url}}</a>
+<div class="alert alert-success" role="alert">
+    <a href="http://fabula.pythonanywhere.com/{{ url}}" class="alert-link">http://fabula.pythonanywhere.com/{{ url}}</a>
+</div>
 </div>
 {% endfor %}
 
