--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -16,6 +16,13 @@
 
 
 {% block URL %}
-
+<div class="col-md-6 col-md-offset-3">
+{% if msg %}
+{% if msg == 'correct' %}
+  <div class="alert alert-success" role="alert">Вы успешно вошли в систему</div>
+{% else %}
+  <div class="alert alert-danger" role="alert">Неправильный логин или пароль</div>
+{% endif %}
+{% endif %}
 {% endblock %}
-
+</div>
