--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,17 @@
 <form method="post" action="{{ url_for('new_link') }}">
   <div class="form-group">
     <!-- <label for="URL">Put a long URL here and we cut it!</label> -->
-    <input class="form-control" name="long_url" placeholder="Put long URL here">
+    <input class="form-control" type="url" name="long_url" placeholder="Put long URL here">
   </div>
+  {% if login %}
+  <div class="form-group">
+    <!-- <label>Choose short URL</label> -->
+    <div class="input-prepend">
+      <span class="add-on">fabula.pythonanywhere.com/{{ login }}/</span>
+      <input class="span2" type="text" name="short_url" placeholder="Short URL">
+    </div>
+  </div>
+  {% endif %}
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
 {% endblock %}
