--- a/templates/recent_url.html
+++ b/templates/recent_url.html
@@ -3,7 +3,7 @@
 {% endblock %}
 
 {% block URL %}
-{% for url in dic %}
+{% for url in l %}
 <div class="col-md-6 col-md-offset-3">
 <div class="alert alert-success" role="alert">
     <a href="http://fabula.pythonanywhere.com/{{ url}}" class="alert-link">http://fabula.pythonanywhere.com/{{ url}}</a>
